# RNDEngine

./: CMakeLists.txt  README.md  imgui.ini
Shaders/: lShader.fs  lShader.vs  model_shader.fs  model_shader.vs  shader.fs  shader.vs
Source/: Source.cpp  glad.c  main.cpp
include/: Camera.h  Lights.h  Mesh.h  Model.h  Shaders.h  Window.h
include/glad/: glad.h
